--- a/trunk/frontend/ing_log_reader/index.html
+++ b/trunk/frontend/ing_log_reader/index.html
@@ -3,7 +3,8 @@
     <title>ING_LOG_READER</title>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8; Cache-Control: no-cache" />
-        <link type="text/css" rel="stylesheet" href="css/style.css" />                           
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="css/style.css" />
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="js/ing_log_reader.js"></script>		
     </head>
@@ -55,6 +56,9 @@
 				</div>
 				<div class="log_form">
 					<div class="log_button" id="button_criteria">Send criteria</div>
+				</div>
+				<div class="log_form">
+					<div class="log_button" id="clean_log">Clean Log</div>
 				</div>
 			</div>
 		</div>
