Se ajusta el cierre de los logs

--- a/frontend/ing_log_reader/index.html
+++ b/frontend/ing_log_reader/index.html
@@ -60,6 +60,9 @@
 				<div class="log_form">
 					<div class="log_button" id="clean_log">Clean Log</div>
 				</div>
+				<div class="log_form">
+					<div class="log_button" id="close_log">Close Log</div>
+				</div>
 			</div>
 		</div>
     </body> 
