log generator y se agregan los criterios de busqueda

--- a/frontend/ing_log_reader/index.html
+++ b/frontend/ing_log_reader/index.html
@@ -55,6 +55,34 @@
 					<input type="checkbox" id="log_invert">
 				</div>
 				<div class="log_form">
+					<div class="log_label">Ignore case</div>
+					<input type="checkbox" id="log_ignore_case">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Count matches</div>
+					<input type="checkbox" id="log_count_matches">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Max count</div>
+					<input type="number" id="log_max_count">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Line number</div>
+					<input type="checkbox" id="log_line_number">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Lines Beforer</div>
+					<input type="number" id="log_before">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Lines After</div>
+					<input type="number" id="log_after">
+				</div>
+				<div class="log_form">
+					<div class="log_label">Lines Context</div>
+					<input type="number" id="log_context">
+				</div>
+				<div class="log_form">
 					<div class="log_button" id="button_criteria">Send criteria</div>
 				</div>
 				<div class="log_form">
